--- a/style.css
+++ b/style.css
@@ -1,14 +1,94 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 body {
   font-family: "Titillium Web", sans-serif;
-  font-size: 1.2rem;
+  font-size: clamp(0.8rem, 2.5vw, 1.5rem);
   line-height: 1.5;
-  color: #333;
-  background-color: #f4f4f4;
+  color: #373735;
+  background-color: #4c4c4c;
   box-sizing: border-box;
+}
+
+a {
+  color: #373735;
+}
+
+.container {
+  /* bg-white xl:max-w-screen-xl xl:m-auto */
+  background-color: white;
+  padding: 0;
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 90rem;
+    margin: 0 auto;
+  }
+}
+
+.header {
+  /* flex flex-row h-20 */
+  display: flex;
+  flex-direction: row;
+  padding: 1rem 0.5rem;
+}
+
+.logo {
+  /* w-20 md:w-auto h-full object-contain */
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+@media screen and (min-width: 768px) {
+  .logo {
+    width: auto;
+  }
+}
+
+.logo-container {
+  width: 15%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero-image {
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .logo-container {
+    /* padding: 2rem 4rem; */
+  }
+}
+
+.nav {
+  width: 85%;
+  height: 100%;
+}
+
+.nav-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  font-weight: bold;
+  width: 100%;
+  height: 100%;
+}
+
+.nav-item {
+  /* h-full flex justify-center items-center px-2 md:px-8 */
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+}
+
+@media screen and (min-width: 768px) {
+  .nav-item {
+  }
 }
 
 ul {
