--- a/style.css
+++ b/style.css
@@ -35,6 +35,12 @@ a {
   padding: 1rem 0.5rem;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1280px) {
+  .site-header {
+    padding: 1rem 2rem;
+  }
+}
+
 .logo {
   width: auto;
   max-height: 50px;
@@ -144,7 +150,13 @@ a:hover {
   padding: 4rem 0;
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (min-width: 768px) and (max-width: 1280px) {
+  .form-container {
+    padding: 2rem 2rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
   .form-container {
     padding: 2rem 1rem;
   }
@@ -248,9 +260,9 @@ a:hover {
 
 .form-image {
   width: auto;
-  max-width: 100%;
+  max-width: 90%;
   height: auto;
-  max-height: 100%;
+  max-height: 90%;
 }
 
 .process-list {
@@ -287,6 +299,12 @@ a:hover {
 
 @media screen and (max-width: 1280px) {
   .process-image {
+    width: 2.5rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .process-image {
     width: 1.5rem;
   }
 }
@@ -310,7 +328,13 @@ a:hover {
   padding: 2rem 0;
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (min-width: 768px) and (max-width: 1280px) {
+  .small-print-container {
+    padding: 1rem 2rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
   .small-print-container {
     padding: 1rem 1rem;
   }
