--- a/style.css
+++ b/style.css
@@ -93,11 +93,18 @@ a {
   justify-content: center;
   align-items: center;
   padding: 0 2rem;
+  font-size: 90%;
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (min-width: 768px) and (max-width: 1280px) {
   .nav-item {
-    padding: 5px;
+    padding: 10px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .nav-item {
+    padding: 7px;
   }
 }
 
