--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Titillium Web", sans-serif;
-  font-size: clamp(0.8rem, 2.5vw, 1.5rem);
+  font-size: clamp(1rem, 2.5vw, 1.5rem);
   line-height: 1.5;
   color: #373735;
   box-sizing: border-box;
@@ -240,7 +240,6 @@ a:hover {
 
 .consent-container label {
   margin-top: 0.5rem;
-  font-size: 1.2rem;
 }
 
 .bb-form-image-container {
@@ -270,6 +269,13 @@ a:hover {
   max-width: 90%;
   height: auto;
   max-height: 90%;
+}
+
+@media screen and (max-width: 768px) {
+  .form-image {
+    max-width: 50%;
+    max-height: 50%;
+  }
 }
 
 .process-list {
