--- a/style.css
+++ b/style.css
@@ -332,9 +332,15 @@ a:hover {
   border: 3px solid black;
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (min-width: 768px) and (max-width: 1280px) {
   .process-divider {
     width: 100%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .process-divider {
+    display: none;
   }
 }
 
