--- a/style.css
+++ b/style.css
@@ -41,6 +41,16 @@ a {
   }
 }
 
+.sub-container {
+  padding: 1rem 0.5rem;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1280px) {
+  .sub-container {
+    padding: 1rem 2rem;
+  }
+}
+
 .logo {
   width: auto;
   max-height: 50px;
